crates/tui/src/view/snapshots/tui__view__offer__tests__offer_one_mcp_server.snap
---
source: crates/tui/src/view/offer_tests.rs
expression: "draw(&app, 80, 24).0"
---
Repository code · 1 item                                                       ✕
A package's TUI files are never installed from a repository.

› MCP server db · required
     approve  [skip]  never
    MCP server: db
    declared in: .fiber/config.json
    runs: /bin/echo

  Send · 0 approve, 1 skip, 0 never











▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
>
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
