crates/tui/src/view/snapshots/tui__view__offer__tests__offer_three_items_on_send.snap
---
source: crates/tui/src/view/offer_tests.rs
expression: screen
---
  MCP server b
     approve  [skip]  never
    MCP server: b
    declared in: .fiber/config.json
    runs: /bin/echo

  MCP server c
     approve  [skip]  never
    MCP server: c
    declared in: .fiber/config.json
    runs: /bin/echo

› Send · 0 approve, 3 skip, 0 never
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
>
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
