crates/tui/src/view/snapshots/tui__view__offer__tests__offer_wrapped_40.snap
---
source: crates/tui/src/view/offer_tests.rs
expression: screen
---
Repository code · 1 item               ✕
A package's TUI files are never
installed from a repository.

› hook fmt
     approve  [skip]  never
    runs: cargo fmt --all -- --check
--config-path rustfmt.toml

  Send · 0 approve, 1 skip, 0 never



▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
>
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
